--- a/index.html
+++ b/index.html
@@ -3,11 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slot Machine</title>
+  <title>waywayland</title>
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="card-choice">
+  <div id="card-choice" class="hidden">
+    <div id="status">カードを一枚えらんでね</div>
+    <ul class="ul">
+      <li><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+    </ul>
+    <ul class="ul">
+      <li><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+    </ul>
+    <ul class="ul justify">
+      <li class="mr-7"><img src="./img/card.png"></li>
+      <li><img src="./img/card.png"></li>
+    </ul>
+    <div class="mt-24">
+      <img class="w-55per" src="./img/kliner.png">
+    </div>
   </div>
   <main></main>
 
