add: もどるボタン

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img class="w-90per" src="./img/card-detail.png" alt="引いたカード">
     </div>
     <div id="close" class="spin">サイコロをふる</div>
-    <div class="status">
+    <div id="return" class="status">
       もどる
     </div>
   </section>
